Drag and drop functionality

--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -17,7 +17,7 @@
           <div class="training-plan-card-container" [ngClass]="columnClass" cdkDrag>
             <app-training-plan-card [trainingPlan]="trainingPlan" [columnClass]="columnClass" />
 
-            <app-circular-icon-button [iconSize]="18" cdkDragHandle [icon]="IconName.SLIDERS" />
+            <app-circular-icon-button [iconSize]="18" cdkDragHandle [icon]="IconName.DRAG" />
           </div>
         }
       }
