--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -125,7 +125,7 @@
               <td data-cell="Notes">
                 <app-input class="notes" [type]="'text'" [name]="namePrefix + 'notes'" [value]="exercise.notes ?? ''" />
               </td>
-              <app-icon [name]="IconName.SLIDERS" cdkDragHandle />
+              <app-icon [name]="IconName.DRAG" cdkDragHandle />
             </tr>
           }
         </tbody>
