--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -127,6 +127,17 @@
       <circle cx="12" cy="5" r="1"></circle>
       <circle cx="12" cy="19" r="1"></circle>
     }
+    @case (IconName.DRAG) {
+      <circle cx="6" cy="5" r="1"></circle>
+      <circle cx="6" cy="12" r="1"></circle>
+      <circle cx="6" cy="19" r="1"></circle>
+
+      <!-- Second vertical line of three dots -->
+      <circle cx="16" cy="5" r="1"></circle>
+      <circle cx="16" cy="12" r="1"></circle>
+      <circle cx="16" cy="19" r="1"></circle>
+    }
+
     @case (IconName.USERS) {
       <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
       <circle cx="9" cy="7" r="4"></circle>
