Add dragable directive and use it in modal

--- a/client/src/app/shared/components/modal/modal.component.scss
+++ b/client/src/app/shared/components/modal/modal.component.scss
@@ -4,6 +4,10 @@
   background-color: transparent !important;
 }
 
+.modal-header {
+  cursor: move;
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
