Fix draggable issues in browser and add settings component

--- a/client/src/app/features/profile-2/profile.component.html
+++ b/client/src/app/features/profile-2/profile.component.html
@@ -12,7 +12,7 @@
 
     <div class="list-item-container">
       @for (item of listItems; track item) {
-        <app-profile-list-item [item]="item" (itemClicked)="onListItemClicked($any($event))" />
+        <app-icon-list-item [item]="item" (itemClicked)="onListItemClicked($any($event))" />
       }
     </div>
   </div>
