--- a/client/src/app/features/profile-2/settings/settings.component.html
+++ b/client/src/app/features/profile-2/settings/settings.component.html
@@ -1,3 +1,3 @@
 @for (item of checkboxItems(); track item.label) {
-  <app-checkbox [item]="item" />
+  <app-checkbox (valueChanged)="onCheckboxValueChange($event)" [item]="item" />
 }
