--- a/client/src/app/features/usage-statistics/usage-statistics.component.html
+++ b/client/src/app/features/usage-statistics/usage-statistics.component.html
@@ -1,24 +1,14 @@
-@if (activityCalendarData$ | async; as activityData) {
-  <app-activity-calendar [activityData]="activityData" />
+@if (usageStatisticsData$ | async; as usageData) {
+  <app-activity-calendar [activityData]="usageData.activityCalendarData" />
 
-  @if (recentTrainingDurations$ | async; as recentTrainingDurations) {
-    <!-- Map the recentTrainingDurations to the LineChartDataset structure -->
-    <app-grouped-bar-chart
-      [yAxisLabel]="'Trainingsdauer (in Minuten)'"
-      [labels]="recentTrainingDurations.labels"
-      [barChartDataSets]="recentTrainingDurations.chartData"
-    />
+  <app-grouped-bar-chart
+    [yAxisLabel]="'Trainingsdauer (in Minuten)'"
+    [labels]="usageData.recentTrainingDurations.labels"
+    [barChartDataSets]="usageData.recentTrainingDurations.chartData"
+  />
 
-    <app-training-day-notification [notificationsInput]="notificationService.trainingDayNotifications()" />
-  } @else {
-    <main class="mt-3">
-      <app-chart-skeleton />
-      <app-chart-skeleton />
-    </main>
-  }
+  <app-training-day-notification [notificationsInput]="notificationService.trainingDayNotifications()" />
 } @else {
-  <main class="mt-3">
-    <app-chart-skeleton />
-    <app-chart-skeleton />
-  </main>
+  <app-chart-skeleton [rows]="4" />
+  <app-chart-skeleton [rows]="4" />
 }
