Implement basic scratch of pause time indicator

--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -242,9 +242,7 @@
     </table>
   </form>
 
-  <!--   <div class="rest-pause-time-indicator" (click)="switchToTimerView()">
-    {{ pauseTimeService.remainingTime | formatTime }}
-  </div> -->
+  <app-rest-pause-time-indicator />
 
   @if (!mobileView) {
     <div class="fixed-bottom-bar">
