--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -183,6 +183,15 @@
       <polyline points="16 17 21 12 16 7"></polyline>
       <line x1="21" y1="12" x2="9" y2="12"></line>
     }
+    @case (IconName.PAUSE) {
+      <rect x="6" y="4" width="4" height="16"></rect>
+      <rect x="14" y="4" width="4" height="16"></rect>
+    }
+    @case (IconName.PAUSE_CIRCLE) {
+      <circle cx="12" cy="12" r="10"></circle>
+      <line x1="10" y1="15" x2="10" y2="9"></line>
+      <line x1="14" y1="15" x2="14" y2="9"></line>
+    }
 
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
