Finished design on pause time progresss bar + adjust nav

--- a/client/src/app/features/training-plans/training-view/rest-pause-time-indicator/rest-pause-time-indicator.component.html
+++ b/client/src/app/features/training-plans/training-view/rest-pause-time-indicator/rest-pause-time-indicator.component.html
@@ -1,3 +1,5 @@
+<div class="progress-bar" [style.width.%]="getProgressPercentage()"></div>
+
 <div class="icon-info-container">
   <div class="icon-box">
     <app-icon [name]="IconName.CLOCK" [size]="18" [color]="'white'" />
