--- a/client/src/app/features/training-plans/training-view/rest-pause-time-indicator/rest-pause-time-indicator.component.scss
+++ b/client/src/app/features/training-plans/training-view/rest-pause-time-indicator/rest-pause-time-indicator.component.scss
@@ -8,11 +8,10 @@
   bottom: 75px;
   left: 0;
   right: 0;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+
   border-top: 1px solid #d1d1d1;
   background-color: rgba(240, 240, 240, 0.9);
-  font-size: 1.1rem;
+  font-size: 1rem;
   background-color: #f0f2f5;
   color: #676767;
 }
@@ -45,4 +44,8 @@
 .pause-time-with-icon-container {
   display: flex;
   gap: 0.5rem;
+
+  p {
+    margin-top: 0.25rem;
+  }
 }
