--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -3,10 +3,18 @@
   padding-inline: 7.5%;
 }
 
+app-rest-pause-time-indicator {
+  display: none;
+}
+
 @media screen and (max-width: 786px) {
   .outlet-wrapper {
     padding-inline: 4%;
     padding-bottom: 7rem;
     min-height: 100vh;
+  }
+
+  app-rest-pause-time-indicator {
+    display: flex;
   }
 }
