--- a/client/src/app/features/training-plans/training-view/rest-pause-time-indicator/rest-pause-time-indicator.component.scss
+++ b/client/src/app/features/training-plans/training-view/rest-pause-time-indicator/rest-pause-time-indicator.component.scss
@@ -5,7 +5,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.65rem 0.75rem;
-  bottom: 75px;
+  padding-bottom: 0.85rem;
+  bottom: 70px;
   left: 0;
   right: 0;
 
@@ -18,9 +19,9 @@
 
 .progress-bar {
   position: absolute;
-  top: 3.25rem;
+  top: 3.05rem;
   left: 0;
-  height: 4.5px;
+  height: 0.25rem;
   background-color: var(--accent-color);
   width: 100%;
   border-radius: 3px;
