Reduce header height in modal and get the most recent training plan

--- a/client/src/app/features/header/header.component.scss
+++ b/client/src/app/features/header/header.component.scss
@@ -54,5 +54,11 @@
   :host {
     padding-left: 5%;
     padding-right: 3%;
+
+    height: 3.25rem;
+  }
+
+  .image-wrapper {
+    padding: 0.225rem;
   }
 }
