Only show timer indicator when timer actually running

--- a/client/src/app/features/profile-2/profile.component.html
+++ b/client/src/app/features/profile-2/profile.component.html
@@ -1,4 +1,4 @@
-@if (profileService.pictureUrl()) {
+@if (profileService.email()) {
   <div class="profile-wrapper">
     <div class="profile-header-container">
       <div class="profile-info">
