Add pagination to training view

--- a/client/src/app/features/training-plans/training-view/training-view.component.html
+++ b/client/src/app/features/training-plans/training-view/training-view.component.html
@@ -241,4 +241,10 @@
       }
     </table>
   </form>
+
+  <app-pagination
+    [currentPage]="trainingDayIndex"
+    [totalPages]="trainingDataService.trainingPlanData.trainingFrequency"
+    (pageChanged)="navigateDay($event, trainingWeekIndex)"
+  />
 }
