--- a/client/src/app/shared/components/pagination/pagination.component.scss
+++ b/client/src/app/shared/components/pagination/pagination.component.scss
@@ -2,24 +2,22 @@ a {
   text-decoration: none;
 }
 
-/* GENERAL STYLES */
-
-.pagination {
-  padding-top: 0;
-
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    display: flex;
-    gap: 0.5rem; // Abstand zwischen den Seitenzahlen
-  }
+:host {
+  padding: 0.25rem;
+  display: flex;
+  gap: 0.5rem;
 
   a {
     display: inline-block;
-    padding: 10px 18px;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    padding: 0;
     color: #222;
-    border-radius: 5px;
+    border-radius: 50%;
+    background-color: #f5f5f5;
+    border: 1px solid #ddd;
     transition:
       background-color 0.3s ease,
       color 0.3s ease;
@@ -28,32 +26,6 @@ a {
       background-color: rgba(0, 0, 0, 0.1);
       color: #000;
       cursor: pointer;
-    }
-
-    &.is-active {
-      background-color: #007bff;
-      color: white;
-      border-radius: 5px;
-    }
-  }
-
-  li {
-    display: inline-block;
-  }
-
-  // Individuelles Styling für Paginierungsgrößen
-  &.p1 a {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    padding: 0;
-    text-align: center;
-    border-radius: 50%;
-    background-color: #f5f5f5;
-    border: 1px solid #ddd;
-
-    &:hover {
-      background-color: rgba(0, 0, 0, 0.1);
     }
 
     &.is-active {
