--- a/client/src/app/features/header/header.component.html
+++ b/client/src/app/features/header/header.component.html
@@ -18,6 +18,7 @@
   <div class="image-wrapper">
     <img
       [src]="profileService.pictureUrl() || '/images/profile-placeholder.webp'"
+      (click)="onProfilePictureClick()"
       alt="M"
       class="h-100 rounded-circle"
     />
