--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 @import './app//shared/directives/tooltip.scss';
+@import './app/css/scrollbar.scss';
+@import './app/css/tables.scss';
 
 :root {
   --accent-color: #a78bfa;
@@ -61,23 +63,4 @@ input.form-control,
 select.form-control,
 textarea.form-control {
   background: inherit;
-}
-
-::-webkit-scrollbar {
-  width: 1rem;
-}
-
-::-webkit-scrollbar-track {
-  background: #e9ecef;
-  border-radius: 10px;
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: #c9c9c9;
-  border-radius: 14px;
-  border: 2px solid #e9ecef;
-}
-
-::-webkit-scrollbar-button {
-  display: none;
 }
