Use time formatting pipes in template and effect hook in rest timer

--- a/client/src/app/features/training-plans/training-view/rest-timer/rest-timer.component.html
+++ b/client/src/app/features/training-plans/training-view/rest-timer/rest-timer.component.html
@@ -36,9 +36,9 @@
       cy="150"
     />
   </svg>
-  <span class="time-remaining">{{ formatTime(remainingTime) }}</span>
+  <span class="time-remaining">{{ remainingTime | formatTime }}</span>
 
-  <span class="initial-time">{{ formatTime(initialTime) }}</span>
+  <span class="initial-time">{{ initialTime | formatTime }}</span>
 </div>
 
 <div class="timer-controls">
