Add first idea for circle visualisation in own dedicated component

--- a/client/src/app/features/training-plans/training-view/rest-pause-time-indicator/rest-pause-time-indicator.component.html
+++ b/client/src/app/features/training-plans/training-view/rest-pause-time-indicator/rest-pause-time-indicator.component.html
@@ -8,11 +8,11 @@
 
 <div class="pause-time-with-icon-container">
   <p>
-    {{ pauseTimeService.getCurrentTime() | formatTime }}
+    {{ pauseTimeService.remainingTime() | formatTime }}
   </p>
 </div>
 
 <div
   class="progress-bar"
-  [style.width.%]="pauseTimeService.getCurrentTime() | toPauseTimeProgressPercentage: pauseTimeService.getInitialTime()"
+  [style.width.%]="pauseTimeService.remainingTime() | toPauseTimeProgressPercentage: pauseTimeService.getInitialTime()"
 ></div>
