--- a/client/src/app/shared/components/percentage-circle-visualisation/percentage-circle-visualisation.component.html
+++ b/client/src/app/shared/components/percentage-circle-visualisation/percentage-circle-visualisation.component.html
@@ -12,8 +12,8 @@
 
     <!-- Gradient for the progress ring -->
     <linearGradient id="progressGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-      <stop offset="0%" style="stop-color: #bcbcbc; stop-opacity: 1" />
-      <stop offset="100%" style="stop-color: #bdbdbd; stop-opacity: 1" />
+      <stop offset="0%" style="stop-color: #f5f5f5; stop-opacity: 1" />
+      <stop offset="100%" style="stop-color: #f1eded; stop-opacity: 1" />
     </linearGradient>
   </defs>
 
