--- a/client/src/app/shared/components/percentage-circle-visualisation/percentage-circle-visualisation.component.html
+++ b/client/src/app/shared/components/percentage-circle-visualisation/percentage-circle-visualisation.component.html
@@ -6,14 +6,14 @@
   <defs>
     <!-- Gradient for the background ring -->
     <linearGradient id="backgroundGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-      <stop offset="0%" style="stop-color: #a78bfa; stop-opacity: 1" />
-      <stop offset="100%" style="stop-color: #5f32e6; stop-opacity: 1" />
+      <stop offset="0%" style="stop-color: #9092e2; stop-opacity: 1" />
+      <stop offset="100%" style="stop-color: #9f85da; stop-opacity: 1" />
     </linearGradient>
 
     <!-- Gradient for the progress ring -->
     <linearGradient id="progressGradient" x1="0%" y1="0%" x2="100%" y2="100%">
       <stop offset="0%" style="stop-color: #f5f5f5; stop-opacity: 1" />
-      <stop offset="100%" style="stop-color: #f1eded; stop-opacity: 1" />
+      <stop offset="100%" style="stop-color: #ffffff; stop-opacity: 1" />
     </linearGradient>
   </defs>
 
