--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -192,6 +192,18 @@
       <line x1="10" y1="15" x2="10" y2="9"></line>
       <line x1="14" y1="15" x2="14" y2="9"></line>
     }
+    @case (IconName.FAST_FORWARD) {
+      <polygon points="13 19 22 12 13 5 13 19"></polygon>
+      <polygon points="2 19 11 12 2 5 2 19"></polygon>
+    }
+    @case (IconName.SKIP_FORWARD) {
+      <polygon points="5 4 15 12 5 20 5 4"></polygon>
+      <line x1="19" y1="5" x2="19" y2="19"></line>
+    }
+    @case (IconName.SKIP_BACK) {
+      <polygon points="19 20 9 12 19 4 19 20"></polygon>
+      <line x1="5" y1="19" x2="5" y2="5"></line>
+    }
 
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
