Add bits of logic to handle dynamic pause time increase

--- a/client/src/app/features/training-plans/training-view/training-view.component.scss
+++ b/client/src/app/features/training-plans/training-view/training-view.component.scss
@@ -118,4 +118,9 @@ tr {
     position: relative;
     top: 2.5rem;
   }
+
+  .navigation-container {
+    justify-content: center;
+    margin-bottom: 3rem;
+  }
 }
