--- a/client/src/app/features/training-plans/training-view/rest-timer/rest-timer.component.html
+++ b/client/src/app/features/training-plans/training-view/rest-timer/rest-timer.component.html
@@ -1,5 +1,10 @@
 <div class="timer-display">
-  <app-percentage-circle-visualisation class="timer-display" [size]="275" [percentage]="percentageRemaining()" />
+  <app-percentage-circle-visualisation
+    class="timer-display"
+    [size]="275"
+    [percentage]="percentageRemaining()"
+    (percentageChanged)="calcTimeAndAdjustTimer($event)"
+  />
 
   <span class="time-remaining">{{ pauseTimeService.remainingTime() | formatTime }}</span>
 
