Collapse search bar on strg f and automatically focus input

--- a/client/src/app/shared/components/search-bar/search-bar.component.html
+++ b/client/src/app/shared/components/search-bar/search-bar.component.html
@@ -1,5 +1,6 @@
 <app-icon [name]="IconName.SEARCH" [size]="20" [color]="'gray'" />
 <input
+  #searchInput
   type="text"
   (input)="onInputChange($event)"
   [value]="searchQuery()"
