--- a/client/src/app/features/training-plans/training-plans/training-plans.component.html
+++ b/client/src/app/features/training-plans/training-plans/training-plans.component.html
@@ -1,4 +1,4 @@
-<div class="search-bar-container" [@toggleCollapse]="searchBarCollapsed() ? 'collapsed' : 'expanded'">
+<div class="search-bar-container" [@toggleCollapse]="isSearchbarCollapsed() ? 'collapsed' : 'expanded'">
   <app-search-bar [(searchQuery)]="trainingPlanSearchQuery" />
 </div>
 
