--- a/client/src/app/shared/icon/icon.component.html
+++ b/client/src/app/shared/icon/icon.component.html
@@ -204,6 +204,11 @@
       <polygon points="19 20 9 12 19 4 19 20"></polygon>
       <line x1="5" y1="19" x2="5" y2="5"></line>
     }
+    @case (IconName.DOWNLOAD) {
+      <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+      <polyline points="7 10 12 15 17 10"></polyline>
+      <line x1="12" y1="15" x2="12" y2="3"></line>
+    }
 
     @default {
       <path d="M0 0h24v24H0z" fill="none"></path>
