Use more conservativ 1rm formula and pass correct params to est max calc

--- a/client/src/app/shared/components/pagination/pagination.component.scss
+++ b/client/src/app/shared/components/pagination/pagination.component.scss
@@ -29,9 +29,9 @@ a {
     }
 
     &.is-active {
-      background-color: #007bff;
+      background-color: var(--accent-color);
       color: white;
-      border-color: #007bff;
+      border-color: var(--accent-color);
     }
   }
 }
