Turn selected exercises to writabel signal

--- a/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
+++ b/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
@@ -5,11 +5,7 @@
   </main>
 } @else {
   <main>
-    <app-multi-select
-      [items]="allExercises"
-      [selectedItems]="selectedExercises!"
-      (selectionChange)="changeDisplayCategories($event)"
-    />
+    <app-multi-select [items]="allExercises" [(selectedItems)]="selectedExercises" />
 
     <app-line-chart
       [data]="lineChartDatasets"
