--- a/client/src/app/shared/components/multi-select/multi-select.component.html
+++ b/client/src/app/shared/components/multi-select/multi-select.component.html
@@ -1,7 +1,7 @@
 <div class="dropdown" [class.show]="isOpen()" (click)="toggleDropdown()">
   <div style="display: flex; justify-content: space-between; align-items: center; width: 100%">
     <div class="chip-container">
-      @for (select of selected(); track select) {
+      @for (select of selectedItems(); track select) {
         <div class="chip">{{ select }}</div>
       }
     </div>
@@ -19,7 +19,7 @@
     <div class="checkbox-container">
       @for (option of filteredItems(); track option) {
         <app-checkbox
-          [item]="{ label: option, isChecked: selected().includes(option) }"
+          [item]="{ label: option, isChecked: selectedItems().includes(option) }"
           (valueChanged)="onSelectionChange(option, $event)"
         />
       }
