Use toggle collapse animation in dropdown

--- a/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
+++ b/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
@@ -5,7 +5,7 @@
   </main>
 } @else {
   <main>
-    <app-multi-select [items]="allExercises" [(selectedItems)]="selectedExercises" />
+    <app-multi-select [items]="allExercises()" [(selectedItems)]="selectedExercises" />
 
     <app-line-chart
       [data]="lineChartDatasets"
