--- a/client/src/app/shared/components/multi-select/multi-select.component.scss
+++ b/client/src/app/shared/components/multi-select/multi-select.component.scss
@@ -1,3 +1,9 @@
+:host {
+  &:hover {
+    cursor: pointer;
+  }
+}
+
 .dropdown {
   width: 100%;
   max-width: 100%;
@@ -29,16 +35,12 @@
 
 .dropdown-menu {
   width: 100%;
-  overflow-y: auto;
+  display: block;
   opacity: 1;
 
   .form-control {
     background: inherit;
   }
-}
-
-.dropdown-menu.show {
-  display: block;
 }
 
 .chip {
