--- a/client/src/app/shared/components/multi-select/multi-select.component.html
+++ b/client/src/app/shared/components/multi-select/multi-select.component.html
@@ -1,32 +1,26 @@
-<div class="dropdown" [class.show]="isOpen()" (click)="toggleDropdown()">
-  <div style="display: flex; justify-content: space-between; align-items: center; width: 100%">
-    <div class="chip-container">
-      @for (select of selectedItems(); track select) {
-        <div class="chip">{{ select }}</div>
-      }
-    </div>
-    <div>
-      @if (isOpen()) {
-        <app-icon [name]="IconName.ChevronUp" />
-      } @else {
-        <app-icon [name]="IconName.ChevronDown" />
-      }
-    </div>
+<div class="dropdown-header">
+  <div class="chip-container">
+    @for (select of selectedItems(); track select) {
+      <div class="chip">{{ select }}</div>
+    }
   </div>
-  <div
-    class="dropdown-menu p-2"
-    [@toggleCollapse]="isOpen() ? 'expanded' : 'collapsed'"
-    (click)="$event.stopPropagation()"
-  >
-    <app-search-bar [(searchQuery)]="searchQuery" />
+  <div>
+    @if (isOpen()) {
+      <app-icon [name]="IconName.ChevronUp" />
+    } @else {
+      <app-icon [name]="IconName.ChevronDown" />
+    }
+  </div>
+</div>
+<div class="dropdown-menu" [@toggleCollapse]="isOpen() ? 'expanded' : 'collapsed'" (click)="$event.stopPropagation()">
+  <app-search-bar [(searchQuery)]="searchQuery" />
 
-    <div class="checkbox-container">
-      @for (option of filteredItems(); track option) {
-        <app-checkbox
-          [item]="{ label: option, isChecked: selectedItems().includes(option) }"
-          (valueChanged)="onSelectionChange(option, $event)"
-        />
-      }
-    </div>
+  <div class="checkbox-container">
+    @for (option of filteredItems(); track option) {
+      <app-checkbox
+        [item]="{ label: option, isChecked: selectedItems().includes(option) }"
+        (valueChanged)="onSelectionChange(option, $event)"
+      />
+    }
   </div>
 </div>
