--- a/client/src/app/shared/components/multi-select/multi-select.component.scss
+++ b/client/src/app/shared/components/multi-select/multi-select.component.scss
@@ -1,14 +1,18 @@
 :host {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  padding: 5px 7px;
+  border-bottom: 1px solid #cbd5e1;
   &:hover {
     cursor: pointer;
   }
 }
 
-.dropdown {
-  width: 100%;
-  max-width: 100%;
-  padding: 5px 7px;
-  border-bottom: 1px solid #cbd5e1;
+.dropdown-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .chip-container {
@@ -18,29 +22,14 @@
   max-width: 100%;
 
   & .chip {
-    background: var(--light-grey);
+    background: #e4e4e7;
   }
-}
-.dropdown button {
-  width: 100%;
-  max-width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.dropdown button:active {
-  background: none;
 }
 
 .dropdown-menu {
   width: 100%;
   display: block;
-  opacity: 1;
-
-  .form-control {
-    background: inherit;
-  }
+  padding: 0.5rem;
 }
 
 .chip {
