--- a/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
+++ b/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
@@ -1,12 +1,7 @@
-@if (!dataLoaded) {
-  <main class="mt-3">
-    <app-chart-skeleton />
-    <app-chart-skeleton />
-  </main>
-} @else {
-  <main>
-    <app-multi-select [items]="allExercises()" [(selectedItems)]="selectedExercises" />
+@if (isLoaded()) {
+  <app-multi-select [items]="allExercises()" [(selectedItems)]="selectedExercises" />
 
+  <div class="chart-grid">
     <app-line-chart
       [data]="lineChartDatasets"
       [labels]="lineChartLabels"
@@ -15,5 +10,10 @@
     />
 
     <app-grouped-bar-chart [labels]="groupedBarChartLabels" [barChartDataSets]="groupedBarChartDatasets" />
-  </main>
+  </div>
+} @else {
+  <div class="chart-grid">
+    <app-chart-skeleton />
+    <app-chart-skeleton />
+  </div>
 }
