Add pagination to statistics page

--- a/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
+++ b/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
@@ -11,6 +11,10 @@
 
     <app-grouped-bar-chart [labels]="groupedBarChartLabels" [barChartDataSets]="groupedBarChartDatasets" />
   </div>
+
+  <div class="pagination-container">
+    <app-pagination [currentPage]="0" [totalPages]="2" />
+  </div>
 } @else {
   <div class="chart-grid">
     <app-chart-skeleton />
