--- a/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.scss
+++ b/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.scss
@@ -15,8 +15,17 @@
   gap: 2rem;
 }
 
+.pagination-container {
+  padding-left: 3rem;
+}
+
 @media (max-width: 1024px) {
   .chart-grid {
     grid-template-columns: 1fr;
+  }
+
+  .pagination-container {
+    display: grid;
+    place-items: center;
   }
 }
