Remove inaccesible drill throug graph and made line cahrt more rakcite

--- a/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
+++ b/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
@@ -1,13 +1,8 @@
 @if (isLoaded()) {
-  <app-multi-select [items]="allExercises()" [(selectedItems)]="selectedExercises" />
+  <app-multi-select [items]="allExercises()" [(selectedItems)]="selectedExercises" [toggleOnSelect]="true" />
 
   <div class="chart-grid">
-    <app-line-chart
-      [data]="lineChartDatasets"
-      [labels]="lineChartLabels"
-      (drillThrough)="showDrillThroughGraph($event)"
-      yAxisTitle="Tonnage (kg)"
-    />
+    <app-line-chart [data]="lineChartDatasets" [labels]="lineChartLabels" yAxisTitle="Tonnage (kg)" />
 
     <app-grouped-bar-chart [labels]="groupedBarChartLabels" [barChartDataSets]="groupedBarChartDatasets" />
   </div>
