Add documentation for grouped bar chart

--- a/client/src/app/features/usage-statistics/usage-statistics.component.html
+++ b/client/src/app/features/usage-statistics/usage-statistics.component.html
@@ -3,8 +3,7 @@
 
   <app-grouped-bar-chart
     [yAxisLabel]="'Trainingsdauer (in Minuten)'"
-    [labels]="usageData.recentTrainingDurations.labels"
-    [barChartDataSets]="usageData.recentTrainingDurations.chartData"
+    [groupedBarChartData]="usageData.recentTrainingDurations"
   />
 
   <app-training-day-notification [notificationsInput]="notificationService.trainingDayNotifications()" />
