--- a/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
+++ b/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
@@ -4,10 +4,7 @@
   <div class="chart-grid">
     <app-line-chart [data]="lineChartData()" yAxisTitle="Tonnage (kg)" />
 
-    <app-grouped-bar-chart
-      [barChartDataSets]="groupedBarChartData().datasets"
-      [labels]="groupedBarChartData().labels"
-    />
+    <app-grouped-bar-chart [groupedBarChartData]="groupedBarChartData()" />
   </div>
 
   <div class="pagination-container">
