--- a/client/src/app/features/profile-2/profile.component.scss
+++ b/client/src/app/features/profile-2/profile.component.scss
@@ -7,12 +7,16 @@
   margin-top: 0.5rem;
   width: 100%;
 
-  .profile-wrapper {
-    width: 55vw;
-    max-width: 650px;
-  }
   p {
     margin: 0;
+  }
+
+  .profile-wrapper {
+    width: 55vw;
+    max-width: 1025px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
   }
 }
 
