--- a/client/src/app/features/usage-statistics/activity-calendar/activity-calendar.component.scss
+++ b/client/src/app/features/usage-statistics/activity-calendar/activity-calendar.component.scss
@@ -18,6 +18,7 @@ $legend-color-size: 12px;
   padding: 1rem;
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  max-width: fit-content;
 
   .calendar-grid {
     display: flex;
