--- a/client/src/app/features/profile-2/profile.component.html
+++ b/client/src/app/features/profile-2/profile.component.html
@@ -19,6 +19,7 @@
       </div>
     </div>
   } @else {
-    <app-spinner />
+    <app-chart-skeleton [rows]="4" />
+    <app-chart-skeleton [rows]="4" />
   }
 }
