Add new single select component based on multi select

--- a/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
+++ b/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.html
@@ -1,6 +1,8 @@
 @if (isLoaded()) {
   <app-multi-select [items]="allExercises()" [(selectedItems)]="selectedExercises" [toggleOnSelect]="true" />
 
+  <app-single-select [options]="['Test', 'Fest']" [(value)]="example" />
+
   <div class="chart-grid">
     <app-line-chart [data]="lineChartData()" yAxisTitle="Tonnage (kg)" />
 
