--- a/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.scss
+++ b/client/src/app/features/training-plans/training-day-statistics/training-day-statistics.component.scss
@@ -19,6 +19,12 @@
   padding-left: 3rem;
 }
 
+.select-container {
+  display: flex;
+  flex-direction: row;
+  gap: 3rem;
+}
+
 @media (max-width: 1024px) {
   .chart-grid {
     grid-template-columns: 1fr;
