--- a/client/src/app/shared/components/select/select.component.html
+++ b/client/src/app/shared/components/select/select.component.html
@@ -1,6 +1,6 @@
 <div class="dropdown-header">
   <div class="chip-container">
-    @for (select of selectedItems(); track select) {
+    @for (select of selectedOptions(); track select) {
       <div class="chip">{{ select }}</div>
     }
   </div>
@@ -18,7 +18,7 @@
   <div class="checkbox-container">
     @for (option of filteredItems(); track option) {
       <app-checkbox
-        [item]="{ label: option, isChecked: selectedItems().includes(option) }"
+        [item]="{ label: option, isChecked: selectedOptions().includes(option) }"
         (valueChanged)="onSelectionChange(option, $event)"
       />
     }
