Use id as optional property in checkbox and use model binding

--- a/client/src/app/shared/components/checbkox/checkbox.component.html
+++ b/client/src/app/shared/components/checbkox/checkbox.component.html
@@ -1,2 +1,2 @@
-<input type="checkbox" [checked]="isChecked()" />
-{{ label() }}
+<input type="checkbox" [checked]="item().isChecked" />
+{{ item().label }}
